# CortenForge Workspace
#
# Industrial-grade foundation, unlimited application.
# From humanoid robots to vehicles to medical simulation.
#
# A-grade or it doesn't ship. No exceptions.

[workspace]
resolver = "2"
members = [
    # Development tooling
    "xtask",

    # The SDK facade — one stable public surface re-exporting the SDK crates.
    "cortenforge",

    # Workspace-wide visual-review viewer (replaces f3d + MeshLab for static artifacts)
    "cf-viewer",
    # Stage 2.5 scan-preprocessing GUI tool — see `docs/SCAN_PREP_DESIGN.md`.
    "tools/cf-scan-prep",
    # Headless, Bevy-free mesh-editing core extracted from cf-scan-prep so
    # both the Bevy tool and CortenForge Studio drive the same algorithms.
    "tools/cf-scan-prep-core",
    # Scan → cast bridge CLI; consumes cf-scan-prep outputs + cast.toml,
    # writes v2.1 mold pieces + plugs + procedure.md.
    "tools/cf-cast-cli",
    # Headless workflow core for the guided scan→cast Studio wizard.
    # The CLI + Slint GUI are thin clients over this. See MISSION.md.
    "tools/cf-studio-core",
    # SDK-boundary orchestrator for Studio — runs the workflow steps by
    # calling the SDK crates; built on cf-studio-core.
    "tools/cf-studio-engine",
    # Headless CLI frontend for Studio — thin client over the engine +
    # the Project state machine; the Slint GUI's behavioral reference.
    "tools/cf-studio",
    # Polished/accessible Slint GUI frontend for Studio (the product
    # surface) — a thin client over the engine, like the CLI.
    "tools/cf-studio-gui",
    # Layered-silicone-device design + testing suite (Bevy + egui GUI).
    # Consumes cf-scan-prep outputs; produces a `<scan>.design.toml`
    # that cf-cast-cli will consume (slice 9). The meat of the program
    # per the user 2026-05-13. See `docs/ENGINEERING_SUITE_DESIGN.md`.
    "tools/cf-device-design",
    # Sim-research viewer (Phase 2 of the sim-decouple refactor).
    # Phase 2 ships a skeleton: scan + centerline overlay + layer-
    # stack readout panel consuming `cf-device-types`. Phase 3 moves
    # the insertion-sim + heat-map + sliding-intruder rendering from
    # cf-device-design. See `docs/SIM_DECOUPLE_REFACTOR_PLAN.md` §4.
    "tools/cf-sim-research",
    # Native Bevy Design↔Simulate studio for the L4–L5 Functional Spinal
    # Unit: paint the two endplate patches, loft + solve the coupled FSU
    # (disc bushing + ligaments + facet contact), and replay the
    # moment-driven ROM. Consumes the shared cf-bevy-common camera +
    # cf-viewer scene scaffold. See project-anatomical-spine-viz.
    "tools/cf-spine-studio",
    # OpenSim (.osim) → MJCF bridge for the musculoskeletal-builder arc
    # (scan → bones/tendons model, Mission #4). Started as the S0 bridge
    # spike; see docs/msk_builder/.
    "tools/cf-osim",
    # Anatomical landmark detection on a body-part scan (knee line, epicondyle
    # width, segment lengths) for the musculoskeletal-builder arc, phase S2.
    "tools/cf-anthro",
    # Place + scale the OpenSim knee skeleton onto detected scan landmarks
    # (the scan↔model bridge) for the musculoskeletal-builder arc, phase S3.
    "tools/cf-msk-fit",
    # Library/parameter spine: the source-agnostic kinematic-tree IR (Model) +
    # morph a template into a body via BodyParams + realize() + ParamSource.
    # Builder-first (CanonicalSource = a body with NO scan). See docs/msk_builder/.
    "tools/cf-msk-lib",
    # MJCF emitter: lower a cf-msk-lib Model into MJCF the sim engine imports,
    # plus the no-scan build_canonical artifact. The deferred cf-mjcf-emit crate
    # split (leg-region A1). See docs/msk_builder/03_phases/leg_region/.
    "tools/cf-mjcf-emit",
    # Co-design optimizer (mission connective-tissue #2): gradient-based
    # optimization over the differentiable soft↔rigid coupling. See docs/codesign/.
    "tools/cf-codesign",

    # Shared Bevy-0.18 helpers (orbit camera + up-axis convention) consumed by
    # cf-viewer + sim-bevy + sim-bevy-soft.
    "cf-bevy-common",

    # Reusable Bevy brush-painting plugin over the `mesh-select` primitive —
    # a consumer registers paintable bodies and reads back the painted
    # face-id set (the disc-endplate paint front-end + generic mesh region
    # selection). UI-free like cf-bevy-common; consumers bring their own egui.
    "cf-mesh-paint",

    # Mesh domain (active development)
    "mesh/mesh-types",
    "mesh/mesh-io",
    "mesh/mesh-repair",
    "mesh/mesh-repair-benches",
    "mesh/mesh-loft",
    "mesh/mesh-select",
    "mesh/mesh-sdf",
    "mesh/mesh-offset",
    "mesh/mesh-shell",
    "mesh/mesh-shell-benches",
    "mesh/mesh-measure",
    "mesh/mesh-printability",
    "mesh/mesh-lattice",

    # Umbrella crate (re-exports all mesh-* crates)
    "mesh/mesh",

    # Examples — thermo (D4 physical-pbit arc)
    "examples/thermo/bistable-pbit",

    # Firmware — D4 physical-pbit (host-testable core; embedded binary is excluded)
    "firmware/pbit-fw-core",

    # Tools — D4 physical-pbit analysis/calibration
    "tools/pbit-analyze",

    # Examples — fundamentals
    "examples/fundamentals/design/hello-solid",
    "examples/fundamentals/design/bio-shapes",
    "examples/fundamentals/design/finger-design",
    "examples/fundamentals/mesh/mesh-pipeline",
    "examples/fundamentals/sim-cpu/hinge-joint/simple-pendulum",
    "examples/fundamentals/sim-cpu/hinge-joint/double-pendulum",
    "examples/fundamentals/sim-cpu/slide-joint/horizontal",
    "examples/fundamentals/sim-cpu/slide-joint/vertical",
    "examples/fundamentals/sim-cpu/ball-joint/spherical-pendulum",
    "examples/fundamentals/sim-cpu/ball-joint/cone-limit",
    "examples/fundamentals/sim-cpu/ball-joint/conical-pendulum",
    "examples/fundamentals/sim-cpu/ball-joint/cone-limit-orbit",
    "examples/fundamentals/sim-cpu/sensors/clock",
    "examples/fundamentals/sim-cpu/sensors/joint-pos-vel",
    "examples/fundamentals/sim-cpu/sensors/frame-pos-quat",
    "examples/fundamentals/sim-cpu/sensors/subtree-com",
    "examples/fundamentals/sim-cpu/sensors/gyro-velocimeter",
    "examples/fundamentals/sim-cpu/sensors/accelerometer",
    "examples/fundamentals/sim-cpu/sensors/touch",
    "examples/fundamentals/sim-cpu/sensors/actuator-force",
    "examples/fundamentals/sim-cpu/sensors/geom-distance",
    "examples/fundamentals/sim-cpu/actuators/motor",
    "examples/fundamentals/sim-cpu/actuators/position-servo",
    "examples/fundamentals/sim-cpu/actuators/velocity-servo",
    "examples/fundamentals/sim-cpu/actuators/damper",
    "examples/fundamentals/sim-cpu/actuators/cylinder",
    "examples/fundamentals/sim-cpu/actuators/integrator",
    "examples/fundamentals/sim-cpu/actuators/activation-filter",
    "examples/fundamentals/sim-cpu/actuators/site-transmission",
    "examples/fundamentals/sim-cpu/actuators/gear-and-limits",
    "examples/fundamentals/sim-cpu/actuators/slider-crank",
    "examples/fundamentals/sim-cpu/multi-scene-test",

    # Examples — fundamentals / sim-cpu / keyframes
    "examples/fundamentals/sim-cpu/keyframes/stress-test",
    "examples/fundamentals/sim-cpu/keyframes/save-restore",
    "examples/fundamentals/sim-cpu/keyframes/multi-body",

    # Examples — fundamentals / sim-cpu / mocap-bodies
    "examples/fundamentals/sim-cpu/mocap-bodies/stress-test",
    "examples/fundamentals/sim-cpu/mocap-bodies/drag-target",
    "examples/fundamentals/sim-cpu/mocap-bodies/push-object",
    "examples/fundamentals/sim-cpu/mocap-bodies/tilt-drop",

    # Examples — fundamentals / sim-cpu / free-joint
    "examples/fundamentals/sim-cpu/free-joint/stress-test",
    "examples/fundamentals/sim-cpu/free-joint/tumble",
    "examples/fundamentals/sim-cpu/free-joint/projectile",
    "examples/fundamentals/sim-cpu/free-joint/spinning-toss",

    # Examples — fundamentals / sim-cpu / integrators
    "examples/fundamentals/sim-cpu/integrators/stress-test",
    "examples/fundamentals/sim-cpu/integrators/comparison-visual",
    "examples/fundamentals/sim-cpu/integrators/euler",
    "examples/fundamentals/sim-cpu/integrators/rk4",
    "examples/fundamentals/sim-cpu/integrators/implicit",
    "examples/fundamentals/sim-cpu/integrators/implicit-fast",
    "examples/fundamentals/sim-cpu/integrators/implicit-spring-damper",

    # Examples — fundamentals / sim-cpu / equality-constraints
    "examples/fundamentals/sim-cpu/equality-constraints/connect-to-world",
    "examples/fundamentals/sim-cpu/equality-constraints/connect-body-to-body",
    "examples/fundamentals/sim-cpu/equality-constraints/weld-to-world",
    "examples/fundamentals/sim-cpu/equality-constraints/weld-body-to-body",
    "examples/fundamentals/sim-cpu/equality-constraints/distance",
    "examples/fundamentals/sim-cpu/equality-constraints/joint-mimic",
    "examples/fundamentals/sim-cpu/equality-constraints/joint-gear",
    "examples/fundamentals/sim-cpu/equality-constraints/stress-test",

    # Examples — fundamentals / sim-cpu / contact-filtering
    "examples/fundamentals/sim-cpu/contact-filtering/stress-test",
    "examples/fundamentals/sim-cpu/contact-filtering/bitmask",
    "examples/fundamentals/sim-cpu/contact-filtering/exclude-pairs",
    "examples/fundamentals/sim-cpu/contact-filtering/ghost-layers",

    # Examples — fundamentals / sim-cpu / tendons
    "examples/fundamentals/sim-cpu/tendons/stress-test",
    "examples/fundamentals/sim-cpu/tendons/fixed-coupling",
    "examples/fundamentals/sim-cpu/tendons/spatial-path",
    "examples/fundamentals/sim-cpu/tendons/sphere-wrap",
    "examples/fundamentals/sim-cpu/tendons/cylinder-wrap",
    "examples/fundamentals/sim-cpu/tendons/tendon-limits",
    "examples/fundamentals/sim-cpu/tendons/pulley",
    "examples/fundamentals/sim-cpu/tendons/tendon-actuator",

    # Examples — fundamentals / sim-cpu / sensors-advanced
    "examples/fundamentals/sim-cpu/sensors-advanced/stress-test",
    "examples/fundamentals/sim-cpu/sensors-advanced/frame-velocity",
    "examples/fundamentals/sim-cpu/sensors-advanced/frame-acceleration",
    "examples/fundamentals/sim-cpu/sensors-advanced/force-torque",
    "examples/fundamentals/sim-cpu/sensors-advanced/rangefinder",
    "examples/fundamentals/sim-cpu/sensors-advanced/subtree-velocity",
    "examples/fundamentals/sim-cpu/sensors-advanced/subtree-angmom",
    "examples/fundamentals/sim-cpu/sensors-advanced/actuator-pos-vel",

    # Examples — fundamentals / sim-cpu / passive-forces
    "examples/fundamentals/sim-cpu/passive-forces/stress-test",
    "examples/fundamentals/sim-cpu/passive-forces/fluid-drag",
    "examples/fundamentals/sim-cpu/passive-forces/ellipsoid-drag",
    "examples/fundamentals/sim-cpu/passive-forces/wind",
    "examples/fundamentals/sim-cpu/passive-forces/spring-damper-tuning",

    # Examples — fundamentals / sim-cpu / joint-limits
    "examples/fundamentals/sim-cpu/joint-limits/stress-test",
    "examples/fundamentals/sim-cpu/joint-limits/hinge-limits",
    "examples/fundamentals/sim-cpu/joint-limits/slide-limits",
    "examples/fundamentals/sim-cpu/joint-limits/ball-cone",

    # Examples — fundamentals / sim-cpu / contact-tuning
    "examples/fundamentals/sim-cpu/contact-tuning/friction-slide",
    "examples/fundamentals/sim-cpu/contact-tuning/condim-compare",
    "examples/fundamentals/sim-cpu/contact-tuning/solref-bounce",
    "examples/fundamentals/sim-cpu/contact-tuning/pair-override",
    "examples/fundamentals/sim-cpu/contact-tuning/solimp-depth",
    "examples/fundamentals/sim-cpu/contact-tuning/margin-gap",
    "examples/fundamentals/sim-cpu/contact-tuning/stress-test",

    # Examples — fundamentals / sim-cpu / energy-momentum
    "examples/fundamentals/sim-cpu/energy-momentum/free-flight",
    "examples/fundamentals/sim-cpu/energy-momentum/pendulum-energy",
    "examples/fundamentals/sim-cpu/energy-momentum/elastic-bounce",
    "examples/fundamentals/sim-cpu/energy-momentum/damped-decay",
    "examples/fundamentals/sim-cpu/energy-momentum/stress-test",

    # Examples — fundamentals / sim-cpu / inverse-dynamics
    "examples/fundamentals/sim-cpu/inverse-dynamics/gravity-compensation",
    "examples/fundamentals/sim-cpu/inverse-dynamics/torque-profile",
    "examples/fundamentals/sim-cpu/inverse-dynamics/forward-replay",
    "examples/fundamentals/sim-cpu/inverse-dynamics/jacobian",
    "examples/fundamentals/sim-cpu/inverse-dynamics/stress-test",

    # Examples — fundamentals / sim-cpu / muscles
    "examples/fundamentals/sim-cpu/muscles/stress-test",
    "examples/fundamentals/sim-cpu/muscles/forearm-flexion",
    "examples/fundamentals/sim-cpu/muscles/activation",
    "examples/fundamentals/sim-cpu/muscles/cocontraction",
    "examples/fundamentals/sim-cpu/muscles/force-length",

    # Examples — fundamentals / sim-cpu / urdf-loading
    "examples/fundamentals/sim-cpu/urdf-loading/stress-test",
    "examples/fundamentals/sim-cpu/urdf-loading/revolute",
    "examples/fundamentals/sim-cpu/urdf-loading/prismatic",
    "examples/fundamentals/sim-cpu/urdf-loading/continuous",
    "examples/fundamentals/sim-cpu/urdf-loading/fixed",
    "examples/fundamentals/sim-cpu/urdf-loading/mimic",
    "examples/fundamentals/sim-cpu/urdf-loading/geometry",
    "examples/fundamentals/sim-cpu/urdf-loading/inertia",
    "examples/fundamentals/sim-cpu/urdf-loading/damping-friction",

    # Examples — fundamentals / sim-cpu / derivatives
    "examples/fundamentals/sim-cpu/derivatives/stress-test",
    "examples/fundamentals/sim-cpu/derivatives/linearize-pendulum",
    "examples/fundamentals/sim-cpu/derivatives/control-design",
    "examples/fundamentals/sim-cpu/derivatives/hybrid-vs-fd",
    "examples/fundamentals/sim-cpu/derivatives/sensor-jacobians",
    "examples/fundamentals/sim-cpu/derivatives/inverse-dynamics",
    "examples/fundamentals/sim-cpu/derivatives/convergence",
    "examples/fundamentals/sim-cpu/derivatives/epsilon-vcurve",

    # Examples — fundamentals / sim-cpu / raycasting
    "examples/fundamentals/sim-cpu/raycasting/stress-test",
    "examples/fundamentals/sim-cpu/raycasting/basic-shapes",
    "examples/fundamentals/sim-cpu/raycasting/scene-query",
    "examples/fundamentals/sim-cpu/raycasting/heightfield",

    # Examples — fundamentals / sim-cpu / sleep-wake
    "examples/fundamentals/sim-cpu/sleep-wake/stress-test",
    "examples/fundamentals/sim-cpu/sleep-wake/sleep-settle",
    "examples/fundamentals/sim-cpu/sleep-wake/wake-on-contact",
    "examples/fundamentals/sim-cpu/sleep-wake/island-groups",

    # Examples — fundamentals / sim-cpu / batch-sim
    "examples/fundamentals/sim-cpu/batch-sim/stress-test",
    "examples/fundamentals/sim-cpu/batch-sim/parameter-sweep",
    "examples/fundamentals/sim-cpu/batch-sim/reset-subset",

    # Examples — fundamentals / sim-cpu / composites
    "examples/fundamentals/sim-cpu/composites/stress-test",
    "examples/fundamentals/sim-cpu/composites/hanging-cable",
    "examples/fundamentals/sim-cpu/composites/cable-catenary",
    "examples/fundamentals/sim-cpu/composites/cable-loaded",

    # Examples — fundamentals / sim-cpu / solvers
    "examples/fundamentals/sim-cpu/solvers/stress-test",
    "examples/fundamentals/sim-cpu/solvers/comparison-visual",
    "examples/fundamentals/sim-cpu/solvers/pgs",
    "examples/fundamentals/sim-cpu/solvers/cg",
    "examples/fundamentals/sim-cpu/solvers/newton",

    # Examples — fundamentals / sim-cpu / mesh-collision
    "examples/fundamentals/sim-cpu/mesh-collision/mesh-on-plane",
    "examples/fundamentals/sim-cpu/mesh-collision/mesh-sphere",
    "examples/fundamentals/sim-cpu/mesh-collision/mesh-box",
    "examples/fundamentals/sim-cpu/mesh-collision/mesh-capsule",
    "examples/fundamentals/sim-cpu/mesh-collision/mesh-cylinder",
    "examples/fundamentals/sim-cpu/mesh-collision/mesh-ellipsoid",
    "examples/fundamentals/sim-cpu/mesh-collision/mesh-on-mesh",
    "examples/fundamentals/sim-cpu/mesh-collision/stress-test",

    # Examples — fundamentals / sim-ml / spaces
    "examples/fundamentals/sim-ml/spaces/stress-test",
    "examples/fundamentals/sim-ml/spaces/obs-extract",
    "examples/fundamentals/sim-ml/spaces/act-inject",
    "examples/fundamentals/sim-ml/spaces/obs-rich",
    "examples/fundamentals/sim-ml/spaces/act-clamping",

    # Examples — fundamentals / sim-ml / sim-env
    "examples/fundamentals/sim-ml/sim-env/stress-test",
    "examples/fundamentals/sim-ml/sim-env/episode-loop",
    "examples/fundamentals/sim-ml/sim-env/sub-stepping",
    "examples/fundamentals/sim-ml/sim-env/on-reset",

    # Examples — fundamentals / sim-ml / shared
    "examples/fundamentals/sim-ml/shared",

    # Examples — fundamentals / sim-ml / vec-env
    "examples/fundamentals/sim-ml/vec-env/stress-test",
    "examples/fundamentals/sim-ml/vec-env/parallel-step",
    "examples/fundamentals/sim-ml/vec-env/auto-reset",
    "examples/fundamentals/sim-ml/vec-env/terminal-obs",
    "examples/fundamentals/sim-ml/vec-env/reinforce",
    "examples/fundamentals/sim-ml/vec-env/ppo",
    "examples/fundamentals/sim-ml/vec-env/td3",
    "examples/fundamentals/sim-ml/vec-env/sac",

    # Examples — fundamentals / sim-ml / persistence
    "examples/fundamentals/sim-ml/persistence/train-then-replay",

    # Examples — fundamentals / sim-ml / 6dof
    "examples/fundamentals/sim-ml/6dof/stress-test",
    "examples/fundamentals/sim-ml/6dof/cem-linear",

    # Examples — sdf-physics / cpu (SDF collision proof ladder, 16 baby steps)
    "examples/sdf-physics/cpu/01-sdf-grid",
    "examples/sdf-physics/cpu/02-thin-grid",
    "examples/sdf-physics/cpu/03-freefall",
    "examples/sdf-physics/cpu/04-rest",
    "examples/sdf-physics/cpu/05-drop",
    "examples/sdf-physics/cpu/06-slide",
    "examples/sdf-physics/cpu/07-pair",
    "examples/sdf-physics/cpu/08-stack",
    "examples/sdf-physics/cpu/09-cube-in-box",
    "examples/sdf-physics/cpu/10-ball-in-bowl",
    "examples/sdf-physics/cpu/11-hinge-free",
    "examples/sdf-physics/cpu/12-hinge-wall",
    "examples/sdf-physics/cpu/13-hinge-stop",
    "examples/sdf-physics/cpu/14-damped-hinge",
    "examples/sdf-physics/cpu/15-concave-stop",
    "examples/sdf-physics/cpu/16-socket",

    # Examples — sdf-physics / gpu
    "examples/sdf-physics/gpu/01-hockey",

    # Examples — integration (cross-domain pipelines)
    "examples/integration/coupled-impact-viewer",
    "examples/integration/deescalation-contrast-viewer",
    "examples/integration/finite-striker-viewer",
    "examples/integration/articulated-striker-viewer",
    "examples/integration/two-way-striker-viewer",
    "examples/integration/design-to-sim",
    "examples/integration/design-to-print",
    "examples/integration/sim-informed-design",
    "examples/integration/full-pipeline",

    # Examples — mesh
    "examples/mesh/ply-with-custom-attributes",
    "examples/mesh/format-conversion",
    "examples/mesh/attributed-mesh-basics",
    "examples/mesh/mesh-repair-walkthrough",
    "examples/mesh/offset/stress-test",
    "examples/mesh/shell-generation/stress-test",
    "examples/mesh/printability-thin-wall",
    "examples/mesh/printability-long-bridge",
    "examples/mesh/printability-trapped-volume",
    "examples/mesh/printability-self-intersecting",
    "examples/mesh/printability-small-feature",
    "examples/mesh/printability-orientation",
    "examples/mesh/printability-technology-sweep",
    "examples/mesh/printability-showcase",
    "examples/mesh/measure/stress-test",
    "examples/mesh/mesh-sdf-distance-query",
    "examples/mesh/mesh-lattice-tpms-gyroid",
    "examples/mesh/mesh-lattice-strut-cubic",
    "examples/mesh/mesh-lattice-density-gradient",
    "examples/mesh/mesh-lattice-shape-bounded",
    "examples/mesh/mesh-lattice-mesh-bounded-infill",

    # Examples — sim-soft
    "examples/sim-soft/sphere-sdf-eval",
    "examples/sim-soft/hollow-shell-sdf",
    "examples/sim-soft/sdf-to-tet-sphere",
    "examples/sim-soft/single-tet-stretch",
    "examples/sim-soft/neo-hookean-uniaxial",
    "examples/sim-soft/multi-element-stretch",
    "examples/sim-soft/layered-scalar-field",
    "examples/sim-soft/blended-scalar-field",
    "examples/sim-soft/bonded-bilayer-beam",
    "examples/sim-soft/concentric-lame-shells",
    "examples/sim-soft/soft-drop-on-plane",
    "examples/sim-soft/hertz-sphere-plane",
    "examples/sim-soft/compressive-block",
    "examples/sim-soft/contact-force-readout",
    "examples/sim-soft/mesh-scan-as-solid",
    "examples/sim-soft/solid-to-sim-soft",
    "examples/sim-soft/silicone-material-table",
    "examples/sim-soft/layered-silicone-device",
    "examples/sim-soft/scan-fit-3layer-sleeve",
    "examples/sim-soft/scan-fit-3layer-sleeve-v15",
    "examples/sim-soft/scan-fit-3layer-sleeve-ramp",
    "examples/sim-soft/scan-fit-3layer-sleeve-yeoh-ramp",
    "examples/sim-soft/scan-fit-3layer-sleeve-yeoh-axial-zoned-ramp",
    "examples/sim-soft/scan-fit-3layer-sleeve-yeoh-axial-zoned-ramp-open-mouth",
    "examples/sim-soft/spade-delaunay-spike",

    # Physical-cast tooling (Track F)
    "examples/cast/layered-silicone-device-v1",
    "examples/cast/layered-silicone-device-v2-scan-curve-following",

    # Foundation (active development)
    "design/cf-geometry",
    "design/cf-fsu-geometry",
    "design/cf-routing",
    "design/cf-routing-tests",
    "design/cf-spatial",

    # Design kernel (active development)
    "design/cf-design",
    "design/cf-design-tests",

    # Cast tooling (active development)
    "design/cf-cast",

    # Shared cap-plane abstraction (parser + dome_wall_only_mesh +
    # DomeWallSignedSdf adapter). Consumed by cf-scan-prep emit /
    # cf-device-design preview + insertion sim / cf-cast-cli mold gen
    # to keep the cap-plane schema in lockstep across the workshop
    # iter-1 pipeline. See `design/cf-cap-planes/src/lib.rs` for the
    # full public surface + the pinned-floor scope-C spec for the
    # architectural arc that introduced it.
    "design/cf-cap-planes",

    # Shared device-design domain types (cavity + layer-stack state,
    # scan resources, sim-design projection, slacker recipe data).
    # Lifted from `tools/cf-device-design/src/main.rs` per
    # `docs/SIM_DECOUPLE_REFACTOR_PLAN.md` §3 (A1 Phase 1) so the
    # future `tools/cf-sim-research/` binary can describe a layered-
    # silicone device the same way as `tools/cf-device-design/`.
    "design/cf-device-types",

    # Shared device-side geometric primitives (cached SDF + per-iso
    # marching-cubes extraction, cavity-render helpers, clip-plane
    # material/plugin/state). Lifted from
    # `tools/cf-device-design/src/{sdf_layers.rs,clip_plane.rs,main.rs}`
    # per `docs/archive/SIM_DECOUPLE_PHASE_3_RECON.md` §2.5.b-d (Phase 2.5
    # mini-arc) so cf-device-design and cf-sim-research share one
    # compute + rendering surface for cavity/layer extraction +
    # clipping.
    "design/cf-device-geometry",

    # Simulation domain - Layer 0 (Bevy-free)
    "sim/L0/types",
    "sim/L0/core",
    "sim/L0/core-benches",
    "sim/L0/mjcf",
    "sim/L0/urdf",
    "sim/L0/tests",
    "sim/L0/gpu",
    "sim/L0/gpu-benches",
    "sim/L0/ml-chassis",
    "sim/L0/ml-chassis-benches",
    "sim/L0/rl",
    "sim/L0/rl-baselines",
    "sim/L0/thermostat",
    "sim/L0/opt",
    "sim/L0/therm-env",
    "sim/L0/soft",

    # Simulation domain - Layer 1 (Bevy integration)
    "sim/L1/bevy",
    "sim/L1/ml-chassis-bevy",
    "sim/L1/sim-bevy-soft",
    # Layer-2 keystone: staggered forward soft↔rigid coupling (sim-soft ↔ sim-core).
    "sim/L1/coupling",
    # Assembled FSU flexion model (bonded soft disc between two rigid vertebrae).
    "sim/L1/fsu-model",

    # Simulation umbrella — one crate re-exporting the headless sim spine
    # (rigid + soft + coupling + model I/O + RL/opt). Mirrors `mesh/mesh`;
    # re-exported by the `cortenforge` facade as `cortenforge::sim`.
    "sim/sim",
]

# Exclude directories that aren't workspace members
exclude = [
    "docs",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/via-balaena/CortenForge"
authors = ["Via Balaena"]
rust-version = "1.87"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# suboptimal_flops (nursery): suggests `a * b + c` -> `a.mul_add(b, c)`. mul_add is
# *fused* (single rounding), so it CHANGES floating-point results. Empirically (A/B,
# 2026-05-30) applying it shifted cf-cast SDF values enough to flip marching-cubes
# topology — the g7/g9 prismatic-pin characterisation tests changed component counts,
# i.e. it alters physically-validated cast geometry. Byte-identity > the marginal
# perf/accuracy of one nursery lint, so we opt out workspace-wide. The lint newly
# fired across 11 crates after the clippy 1.95 -> 1.96 stable bump.
suboptimal_flops = "allow"
# unwrap/expect: warn at workspace level (for tests), deny in lib.rs (for library code)
# See docs/INFRASTRUCTURE.md "Safety Lint Policy" for the rationale.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "deny"
unimplemented = "deny"
# Silent failure prevention: catch discarded Results and #[must_use] values
let_underscore_must_use = "deny"

# ============================================================================
# WORKSPACE DEPENDENCIES
# ============================================================================
# All crates should use { workspace = true } for these dependencies
# to ensure version consistency across the workspace.

[workspace.dependencies]
# ---------------------------------------------------------------------------
# Math Foundation
# ---------------------------------------------------------------------------
# nalgebra: Linear algebra, matches parry3d and avian for compatibility
nalgebra = "0.34.2"
# num-traits: generic numeric traits (Float, Zero, One, NumCast) — promoted
# to explicit workspace dep per platform refactor audit A.1 (Tensor<T> generic);
# already transitive via nalgebra, this just gives us a direct import path.
# Default "std" feature required — Float impls for f32/f64 are gated on it.
num-traits = "0.2"
# (glam removed — was only used by routing crates)

# ---------------------------------------------------------------------------
# Error Handling
# ---------------------------------------------------------------------------
# thiserror: Derive macros for custom error types
thiserror = "2.0"
# anyhow: Flexible error handling for applications
anyhow = "1.0"

# ---------------------------------------------------------------------------
# Serialization
# ---------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
toml = "1.1"

# ---------------------------------------------------------------------------
# Spatial & Collision
# ---------------------------------------------------------------------------
# parry3d: Collision detection, BVH, convex hulls
parry3d = "0.17"
# parry3d-f64: f64-Real sibling of parry3d. Used by mesh-printability's
# F4 spatial-index path (`flag_thin_wall_faces` BVH ray-cast) where
# f32 precision drift at the `min_wall_thickness` threshold causes
# borderline 1.0 mm walls to flag spuriously. See
# `docs/CF_CAST_F4_SPATIAL_INDEX_RECON.md` §B-2 + the S1 commit's
# precision diagnosis. Two parry crates in workspace = ~2× build
# cost of parry; acceptable for the precision win.
parry3d-f64 = "0.17"

# ---------------------------------------------------------------------------
# Randomness
# ---------------------------------------------------------------------------
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
# getrandom is not used directly anywhere in this workspace; it enters
# transitively via rand_chacha → rand_core. It is registered here so
# L0 crates that build for wasm32-unknown-unknown can opt the
# transitive copy into the `wasm_js` backend (see each L0 crate's
# `[target.'cfg(...)'.dependencies]` block + the workspace
# `.cargo/config.toml` rustflag).
getrandom = { version = "0.3", features = ["wasm_js"] }

# ---------------------------------------------------------------------------
# Parallelism
# ---------------------------------------------------------------------------
rayon = "1.12"

# ---------------------------------------------------------------------------
# Data Structures
# ---------------------------------------------------------------------------
hashbrown = "0.16"

# ---------------------------------------------------------------------------
# Image Processing
# ---------------------------------------------------------------------------
image = "0.25"

# ---------------------------------------------------------------------------
# Logging & Tracing
# ---------------------------------------------------------------------------
tracing = "0.1"
# (tracing-subscriber removed — was only used by removed crates)

# ---------------------------------------------------------------------------
# Bevy Ecosystem (Layer 1 only - not used by Layer 0 crates)
# ---------------------------------------------------------------------------
# x11 feature required for examples to build on Linux. Without a platform
# backend feature, winit hits `compile_error!("platform not supported")`
# during its conditional compilation. macOS uses an unconditional backend
# so local builds don't surface this; CI did until x11 was added.
bevy = { version = "0.18", default-features = false, features = ["x11"] }

# ---------------------------------------------------------------------------
# Compression
# ---------------------------------------------------------------------------
zip = "8.6"

# ---------------------------------------------------------------------------
# Mesh I/O Formats
# ---------------------------------------------------------------------------
# PLY format support
ply-rs = "0.1"
# 3MF format support (XML parsing)
quick-xml = "0.39"
# STEP format support (CAD interchange) - truck ecosystem
truck-stepio = "0.3"
truck-modeling = "0.6"
truck-topology = "0.6"
truck-polymesh = "0.6"
truck-meshalgo = "0.4"

# ---------------------------------------------------------------------------
# GPU Compute
# ---------------------------------------------------------------------------
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# ---------------------------------------------------------------------------
# Mesh-CSG
# ---------------------------------------------------------------------------
# manifold3d: post-MC mesh-CSG kernel for cf-cast's mating-feature stage
# (`docs/CF_CAST_MATING_FEATURES_RECON.md` §2 + §11). Pre-1.0; pinned exact
# patch — manifold3d's API + output bit-pattern are not yet semver-stable,
# and the cross-piece shared-primitive invariant rests on bit-equal output.
# First-time builds compile the upstream `elalish/manifold` C++ kernel via
# manifold-csg-sys's build.rs (CMake + a vendored Clipper2); measured ~3 min
# 14 s on the S1 spike. Subsequent builds use cargo's target cache.
manifold3d = { version = "=0.1.8", features = ["nalgebra"] }

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------
criterion = "0.8"
proptest = "1.10"
approx = "0.5"
tempfile = "3.27"

# ---------------------------------------------------------------------------
# Internal Workspace Crates
# ---------------------------------------------------------------------------
# These are path dependencies for workspace members

# Mesh domain
mesh-types = { path = "mesh/mesh-types" }
mesh-io = { path = "mesh/mesh-io" }
mesh-repair = { path = "mesh/mesh-repair" }
mesh-repair-benches = { path = "mesh/mesh-repair-benches" }
mesh-loft = { path = "mesh/mesh-loft" }
mesh-select = { path = "mesh/mesh-select" }
mesh-sdf = { path = "mesh/mesh-sdf" }
mesh-offset = { path = "mesh/mesh-offset" }
mesh-shell = { path = "mesh/mesh-shell" }
mesh-shell-benches = { path = "mesh/mesh-shell-benches" }
mesh-measure = { path = "mesh/mesh-measure" }
mesh-printability = { path = "mesh/mesh-printability" }
mesh-lattice = { path = "mesh/mesh-lattice" }

# Umbrella crate
mesh = { path = "mesh/mesh" }

# Geometric kernel
cf-geometry = { path = "design/cf-geometry" }
cf-fsu-geometry = { path = "design/cf-fsu-geometry" }
cf-routing = { path = "design/cf-routing" }
cf-routing-tests = { path = "design/cf-routing-tests" }

# Spatial foundation
cf-spatial = { path = "design/cf-spatial" }

# Design kernel.
# `default-features = false` at the workspace level drops the
# `parallel-meshing` feature (rayon + rayon-core + crossbeam-*) for all
# inheriting consumers — required to keep sim-soft under the L0 100-dep
# tier cap. Only cf-design-tests calls `mesh_adaptive_par`; it opts in
# via `features = ["parallel-meshing"]`. cf-design's own `default =
# ["parallel-meshing"]` keeps `cargo test -p cf-design` exercising the
# par_* tests by default.
cf-design = { path = "design/cf-design", default-features = false }
cf-design-tests = { path = "design/cf-design-tests" }

# Cast tooling
cf-cast = { path = "design/cf-cast" }

# Scan→cast bridge — consumed as a LIBRARY by cf-studio-engine
# (`run()` for mold generation + `parse_centerline_from_prep_toml`).
# Also builds the `cf-cast-cli` binary.
cf-cast-cli = { path = "tools/cf-cast-cli" }

# D4 physical-pbit (firmware core + analysis tool)
pbit-fw-core = { path = "firmware/pbit-fw-core" }

# The SDK facade — apps depend on this single crate (see MISSION.md).
# default-features off at the workspace baseline so each consumer opts into
# only the SDK domains it uses (see the facade's `[features]`); members add
# `features = [...]`. A direct `cargo add cortenforge` still gets all domains
# via the facade's own `default`. Only cf-studio-{engine,gui} consume it.
cortenforge = { path = "cortenforge", default-features = false }

# CortenForge Studio — guided scan→cast wizard (see MISSION.md).
# cf-studio-core: headless workflow spine. cf-studio-engine: the
# SDK-boundary orchestrator built on the spine + the SDK crates.
cf-studio-core = { path = "tools/cf-studio-core" }
cf-studio-engine = { path = "tools/cf-studio-engine" }

# Headless mesh-editing core extracted from cf-scan-prep; consumed by the
# cf-scan-prep Bevy tool and (later) cf-studio's live scan editor.
cf-scan-prep-core = { path = "tools/cf-scan-prep-core" }

# Shared cap-plane abstraction
cf-cap-planes = { path = "design/cf-cap-planes" }

# Shared device-design domain types (Phase 1 of the sim-decouple
# refactor — `docs/SIM_DECOUPLE_REFACTOR_PLAN.md` §3). Lifted from
# `tools/cf-device-design/src/main.rs` so cf-device-design (CAD) +
# cf-sim-research (Phase 2+) describe a layered-silicone device the
# same way.
cf-device-types = { path = "design/cf-device-types" }

# Shared device-side geometric primitives (Phase 2.5 of the
# sim-decouple refactor — `docs/archive/SIM_DECOUPLE_PHASE_3_RECON.md`
# §2.5.b-d). Cached SDF + iso extraction + cavity-render helpers +
# clip-plane material/plugin/state, consumed by cf-device-design +
# cf-sim-research.
cf-device-geometry = { path = "design/cf-device-geometry" }

# Sim domain - Layer 0 (Bevy-free)
sim-types = { path = "sim/L0/types" }
sim-core = { path = "sim/L0/core" }
sim-core-benches = { path = "sim/L0/core-benches" }
sim-mjcf = { path = "sim/L0/mjcf" }
sim-urdf = { path = "sim/L0/urdf" }
sim-gpu = { path = "sim/L0/gpu" }
sim-gpu-benches = { path = "sim/L0/gpu-benches" }
sim-ml-chassis = { path = "sim/L0/ml-chassis" }
sim-ml-chassis-benches = { path = "sim/L0/ml-chassis-benches" }
sim-rl = { path = "sim/L0/rl" }
sim-rl-baselines = { path = "sim/L0/rl-baselines" }
sim-thermostat = { path = "sim/L0/thermostat" }
sim-opt = { path = "sim/L0/opt" }
sim-therm-env = { path = "sim/L0/therm-env" }
sim-soft = { path = "sim/L0/soft" }
# Sim domain - Layer 1 (Bevy integration)
sim-coupling = { path = "sim/L1/coupling" }
cf-fsu-model = { path = "sim/L1/fsu-model" }
# Headless sim umbrella (re-exports the spine above) — see sim/sim.
sim = { path = "sim/sim" }
sim-bevy = { path = "sim/L1/bevy" }
sim-ml-chassis-bevy = { path = "sim/L1/ml-chassis-bevy" }
sim-bevy-soft = { path = "sim/L1/sim-bevy-soft" }

# Shared Bevy-0.18 helpers consumed by cf-viewer + sim-bevy + sim-bevy-soft.
cf-bevy-common = { path = "cf-bevy-common" }

# Reusable Bevy brush-painting plugin over `mesh-select`; consumed by
# sim-bevy-soft's paint-faces example (and CortenForge Studio).
cf-mesh-paint = { path = "cf-mesh-paint" }

# cf-viewer library — scene helpers (`RenderScale`, `compute_render_scale`,
# `setup_camera_and_lighting`, `spawn_face_mesh`) shared with
# `tools/cf-scan-prep` per the Stage 2.5 design spec
# (`docs/SCAN_PREP_DESIGN.md` §Architectural decisions §Tool home).
# Library-only consumption; the `cf-view` binary stays out of dependents'
# build graphs.
cf-viewer = { path = "cf-viewer" }

# meshopt-rs — Rust FFI bindings to Arseny Kapoulkine's `meshoptimizer`
# C++ library (battle-tested in Unity, Unreal, Bevy itself). License
# MIT/Apache-2.0.
#
# Originally adopted (Stage 2.5 commit #5) for the Simplify panel's
# boundary-preserving quadric edge collapse decimation. Replaced in
# `tools/cf-scan-prep` 2026-05-26 with `baby_shark` (below) after S1.1
# probe-7 showed `meshopt::simplify_decoder` introduces non-manifold
# edges + duplicate faces on a manifold input (35 each on the workshop
# iter-1 sock-over-capsule scan) which then trips manifold3d-based
# downstream consumers (cf-cast's `apply_mating_transforms`). Retained
# at the workspace level for `cf-device-geometry` + `cf-sim-research`,
# which use other meshopt entry points unrelated to decimation; if
# those later need a decimator they should also switch to baby_shark.
meshopt = "0.6.2"

# baby_shark — pure-Rust geometry processing. Manifold-preserving
# incremental QEM edge decimator. Replaces meshopt::simplify_decoder
# in `tools/cf-scan-prep` per S1.1 probe-8 (2026-05-26): baby_shark's
# `EdgeDecimator` produces zero non-manifold edges + zero duplicate
# faces on the workshop iter-1 sock-over-capsule scan where meshopt
# produced 35 + 35. Costs ~12× wall-clock (38s vs 3s for the iter-1
# regen) — acceptable for cf-scan-prep's interactive one-shot save
# flow. License MIT.
baby_shark = "0.3"

# Test/dev build speed: optimize the geometry hot path so the debug test
# suite isn't dominated by unoptimized marching-cubes.
#
# Why both profiles: the MC grind lives in `mesh-offset`
# (`marching_cubes`/`ScalarGrid`) + the per-sample SDF eval in
# `cf-design`/`cf-cast`. Under `cargo test`, the crate-under-test uses the
# `test` profile but its DEPENDENCIES build under `dev` — so `mesh-offset`
# (a dependency) needs `[profile.dev]` while the cf-cast test target needs
# `[profile.test]`. Setting both covers the whole hot path. Measured pain:
# `cargo test -p cf-cast --lib` ran ~27 min unoptimized (the multi-layer
# `export_molds_v2_*` MC tests), and `xtask grade`'s `cargo test` is
# debug too; the g7/g9 MC probes compound it.
#
# `debug-assertions` + `overflow-checks` stay ON, so this is NOT
# `--release`: it changes neither assertion semantics (no `debug_assert!`
# is silenced) nor FP results. Rust/LLVM apply no fast-math (no FP
# reassociation/contraction) at any opt-level, so f64 / marching-cubes
# output is bit-identical across opt-levels on a given target — the
# crate's bit-exact gates (`f4_*_bit_precise_flat`,
# `pin_cylinder_mesh_is_bit_equal_across_pieces`, `pour_mass_*_bit_exact`)
# verify this. opt-level 2 (not 3) keeps incremental recompiles reasonable
# for the optimization the MC loops actually need.
[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2
